tambah proyek react

--- a/index.html
+++ b/index.html
@@ -113,12 +113,29 @@
         </section>
         <br><br><br><br><br><br>
         <section class="pengalaman" id="pengalaman">
-            <h1 class="">Pengalaman</h1>
+            <h1 class="">Proyek</h1>
             <div class="content">
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide content-1">
-                            <img src="/assets/Pengelola-Gudang/dashboard.png" alt="">
+                            <img src="assets/React/dashboard.png" alt="">
+                            <h6>Personal Project</h6>
+                            <h5>MongoDB | Express | React | Node.JS</h5>
+                            <h2>Clone Projek Tugas Akhir Menggunakan React</h2>
+                            <p>Sistem monitoring produksi yang merupakan Cloningan dari tugas akhir berbasis
+                                mobile menggunakan teknologi MongoDB, Express,
+                                React.JS dan Node.JS</p>
+                            <div class="button-pengalaman">
+                                <div class="btn-selengkapnya" id="sel-react">
+                                    <p>Selengkapnya</p>
+                                </div>
+                                <div class="btn-github" id="git-react">
+                                    <p>Github</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide content-1">
+                            <img src="assets/Pengelola-Gudang/dashboard.png" alt="">
                             <h6>CV. Karya Hidup Sentosa</h6>
                             <h5>PHP | Bootstrap | MySQL</h5>
                             <h2>Sistem Informasi Pengelolaan Material Pada Gudang Divisi</h2>
@@ -223,6 +240,23 @@
                                     <div class="btn-github" id="git-todo-mobile">
                                         <p>Github</p>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide content-7">
+                            <img src="assets/mini-project/beranda.png" alt="">
+                            <h6>RevoU Software Engineering Fundamental Course</h6>
+                            <h5>HTML | CSS | JavaScript</h5>
+                            <h2>Mini Project</h2>
+                            <p>Website profil sekolah yang dibuat dengan pemrograman web biasa HTML, CSS dan JavaScript
+                                merupakan tugas dari Software Engineering Fundamental Course oleh <span
+                                    id="revou">RevoU</span>.</p>
+                            <div class="button-pengalaman">
+                                <div class="btn-selengkapnya" id="sel-revou">
+                                    <p>Selengkapnya</p>
+                                </div>
+                                <div class="btn-github" id="git-revou">
+                                    <p>Github</p>
                                 </div>
                             </div>
                         </div>
